# seki

./: .dockerignore  .gitignore  .nvim.lua  .rubocop.yml  .sqlfluff  000000_create_players.rb  000001_create_games.rb  AGENTS.md  API_SPEC.md  CLAUDE.md  Cargo.toml  Dockerfile  FRONTEND_SPEC.md  Gemfile  ISSUES.md  PLANS.md  Procfile.dev  README.md  docker-compose.yaml  docker-compose.yml  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  random-bots.toml  todo.md
seki-api/: Cargo.toml
seki-api/src/: game.rs  lib.rs  user.rs  ws.rs
seki-api/tests/: deser_test.rs
seki-client/: Cargo.toml
seki-client/src/: http.rs  ws.rs
seki-gtp/: Cargo.toml
seki-gtp/src/: bot.rs  client.rs  config.rs  engine.rs  gtp.rs  lib.rs  main.rs  ws.rs
seki-random-bots/: Cargo.toml  write_bot.py
seki-random-bots/src/: action.rs  bot.rs  config.rs  main.rs
seki-web/: Cargo.toml  build.rs
seki-web/android/: build.gradle.kts  settings.gradle.kts
seki-web/android/app/: proguard-rules.pro
seki-web/frontend/: build.js  build.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
seki-web/frontend/scripts/: live-tab-benchmark.mjs  organize-imports.mjs
seki-web/frontend/src/: analysis.ts  analysis.tsx  app.tsx  board.tsx  chat.tsx  controls.tsx  coord-toggle.ts  format.ts  game-channel.ts  game-clock.ts  game-context.ts  game-controls.ts  game-description.tsx  game-dom.ts  game-messages.ts  game-notifications.ts  game-page-layout.tsx  game-render.tsx  game-settings-form.tsx  game-sound.ts  game-ui.ts  game-util.ts  games-list.tsx  globals.d.ts  go.tsx  icons.tsx  index.ts  live-game.tsx  live.ts  move-confirm.ts  move-tree.tsx  nav-status.tsx  player-label.tsx  player-panel.tsx  premove.ts  push.ts  service-worker.ts  sgf-io.ts  shared-controls.ts  user-games.tsx  (+3 more)
seki-web/frontend/src/__mocks__/: wasm-stub.ts
seki-web/frontend/src/__tests__/: access.test.ts  ai-heatmap.test.ts  ai-model-download.test.ts  ai-poc-feature-encoder.test.ts  ai-poc-mcts.test.ts  ai-position.test.ts  analysis-session-controller.test.ts  bot-move.test.ts  bot-score.test.ts  capabilities.test.ts  controls.test.tsx  create-board.test.ts  direct-challenge-settings.test.ts  flash.test.ts  game-board-display.test.tsx  game-description.test.tsx  live-game-board-section.test.ts  live-game-page.test.ts  live-game-sidebar.test.ts  mode.test.ts  move-tree-layout.test.ts  move-tree-layout.test.ts.skip  navigation-errors.test.ts  notification-bell.test.ts  pending-actions.test.ts  phase.test.ts  players-screen.test.ts  profile-rating-graph.test.ts  rating-format.test.ts  rating-preferences.test.ts  routes.test.ts  setup.test.ts  user-data.test.ts  user-label.test.tsx
seki-web/frontend/src/ai/: analyze.ts  heatmap.ts  model-download.ts  position.ts
seki-web/frontend/src/ai-poc/: feature-encoder.ts  harness.ts  mcts.ts  random-mcts-worker.ts  types.ts  worker.ts
seki-web/frontend/src/components/: GameControls.tsx  LobbyControls.tsx  LobbyPopover.tsx  UIControls.tsx  account-menu.tsx  ai-model-download-dialog.tsx  chat.tsx  connection-status.tsx  controls-menu.tsx  (+27 more)
seki-web/migrations/: 001_initial.sql  002_add_game_indexes.sql  002_add_games_stage.sql  002_player_ratings.sql  003_fix_handicap_defaults.sql  003_max_handicap.sql  003_require_username.sql  004_drop_is_handicap.sql  004_pwa_push.sql  004_undo_rejected.sql  005_drop_undo_requesting_player.sql  005_open_game_rating_range.sql  005_territory_review_countdown.sql  006_game_participants.sql  006_message_enhancements.sql  006_rename_done_stage.sql  007_add_is_bot.sql  007_allow_undo.sql  007_game_reads.sql  008_add_nigiri.sql  008_fcm_tokens.sql  008_territory_review_dead_stones.sql  009_add_api_token.sql  009_add_cascade_deletes.sql  010_add_open_to.sql  010_add_time_control.sql  010_restore_unique_constraints.sql  011_add_invite_only.sql  011_merge_clock_into_games.sql  011_server_config.sql  012_rename_pregame_approval_columns.sql  012_turn_clock_snapshot.sql  013_chat_client_message_ids.sql
seki-web/migrations_sqlite/: 001_initial.sql
seki-web/src/: db.rs  error.rs  lib.rs  main.rs  session.rs  utils.rs
seki-web/src/models/: app_credential.rs  fcm_token.rs  game.rs  game_clock.rs  game_read.rs  message.rs  mod.rs  player.rs  pregame_settings.rs  push_destination.rs  rating.rs  server_config.rs  turn.rs  user.rs  vapid_config.rs
seki-web/src/routes/: analysis.rs  api.rs  auth.rs  fcm.rs  flash.rs  games.rs  health.rs  mod.rs  push.rs  reload.rs  settings.rs  spa.rs  users.rs  web_api.rs
seki-web/src/services/: clock.rs  clock_sweep.rs  engine_builder.rs  fcm.rs  game_access.rs  game_actions.rs  game_creator.rs  game_joiner.rs  jwt.rs  live.rs  mailer.rs  mod.rs  presentation_actions.rs  push.rs  rating.rs  state_assembly.rs  state_serializer.rs
seki-web/src/templates/: analysis.rs  auth.rs  games_list.rs  games_new.rs  games_show.rs  mod.rs  settings.rs  shell.rs  user_profile.rs
seki-web/src/views/: games_show.rs  mod.rs
seki-web/src/ws/: game_channel.rs  handler.rs  live.rs  mod.rs  presence.rs  presence_subscriptions.rs  registry.rs  registry_cleanup.rs
seki-web/static/: ai-poc.html  manifest.json  new-game.js  sw.js
seki-web/static/css/: application.css  base.css  chat.css  controls.css  desktop.css  forms.css  game-info.css  go.css  goban.css  medium.css  players.css  profile.css  styles.css
seki-web/templates/: analysis.html  base.html  settings.html  spa_shell.html
seki-web/templates/auth/: login.html  register.html
seki-web/templates/games/: list.html  new.html  show.html
seki-web/templates/macros/: board_controls.html  game.html
seki-web/templates/users/: profile.html
seki-web/tests/ws/: api.rs  chat.rs  common.rs  disconnect.rs  game_lifecycle.rs  ko.rs  lobby.rs  main.rs  moves.rs  pass.rs  presence.rs  presentation.rs  private_game.rs  rating.rs  rematch.rs  resign.rs  security.rs  smoke.rs  state_guards.rs  territory.rs  undo.rs  validation.rs
(+426 files in other folders)
