[package]
name = "seki-api"
version = "0.1.0"
edition = "2024"

[dependencies]
go-engine = { path = "../go-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", optional = true }

[features]
openapi = ["dep:utoipa"]