[package]
name = "seki-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["__rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
url = "2"
seki-api-types = { path = "../seki-api-types" }
