[package]
name = "seki-gtp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
go-engine = { path = "../go-engine" }
seki-api = { path = "../seki-api" }
seki-client = { path = "../seki-client" }
