[package]
name = "seki-random-bots"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
seki-client = { path = "../seki-client" }
seki-api = { path = "../seki-api" }
go-engine = { path = "../go-engine" }
