[package]
name = "seki-web"
version = "0.1.0"
edition = "2024"

[dependencies]
go-engine = { path = "../go-engine" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
askama = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "normalize-path"] }
tracing = "0.1"
tower-livereload = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
argon2 = "0.5"
futures-util = "0.3"
