[package]
name = "seki-web"
version = "0.1.0"
edition = "2024"

[dependencies]
go-engine = { path = "../go-engine" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json"] }
askama = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "normalize-path", "set-header"] }
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
tracing = "0.1"
tower-livereload = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
skillratings = "0.29.0"
argon2 = "0.5"
futures-util = "0.3"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
serde_urlencoded = "0.7"

[dev-dependencies]
testcontainers = "0.23"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio-tungstenite = "0.26"
